--- a/src/app/modules/main/header/user/user.component.html
+++ b/src/app/modules/main/header/user/user.component.html
@@ -1,7 +1,7 @@
 <app-dropdown class="user-menu">
     <ng-container dropdown-button>
         <img
-            [src]="user.picture || 'assets/img/default-profile.png'"
+            [src]="user?.picture || 'assets/img/default-profile.png'"
             class="user-image img-circle elevation-2"
             alt="User Image"
         />
@@ -9,39 +9,17 @@
     <ng-container dropdown-menu>
         <li class="user-header bg-primary">
             <img
-                [src]="user.picture || 'assets/img/default-profile.png'"
+                [src]="user?.picture || 'assets/img/default-profile.png'"
                 class="img-circle elevation-2"
                 alt="User Image"
             />
 
             <p>
-                <span>{{ user.email }}</span>
-                <small>
-                    <span>Member since&nbsp;</span>
-                    <span>{{ formatDate(user.createdAt) }}</span>
-                </small>
+                <span>{{ user?.email }}</span>
             </p>
-        </li>
-        <!-- Menu Body -->
-        <li class="user-body">
-            <div class="row">
-                <div class="col-4 text-center">
-                    <a [routerLink]="['/']">Followers</a>
-                </div>
-                <div class="col-4 text-center">
-                    <a [routerLink]="['/']">Sales</a>
-                </div>
-                <div class="col-4 text-center">
-                    <a [routerLink]="['/']">Friends</a>
-                </div>
-            </div>
-            <!-- /.row -->
         </li>
         <!-- Menu Footer-->
         <li class="user-footer">
-            <a [routerLink]="['/profile']" class="btn btn-default btn-flat">
-                Profile
-            </a>
             <a (click)="logout()" class="btn btn-default btn-flat float-right"
                 >Sign out</a
             >
