--- a/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
+++ b/src/app/modules/main/menu-sidebar/menu-sidebar.component.html
@@ -6,7 +6,7 @@
         class="brand-image img-circle elevation-3"
         style="opacity: 0.8"
     />
-    <span class="brand-text font-weight-light">AdminLTE 3</span>
+    <span class="brand-text font-weight-light">OPC-UA Dashboard</span>
 </a>
 
 <!-- Sidebar -->
@@ -15,14 +15,14 @@
     <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
             <img
-                [src]="user.picture || 'assets/img/default-profile.png'"
+                [src]="user?.picture || 'assets/img/default-profile.png'"
                 class="img-circle elevation-2"
                 alt="User Image"
             />
         </div>
         <div class="info">
-            <a [routerLink]="['/profile']" class="d-block">
-                {{ user.email }}
+            <a [routerLink]="['/']" class="d-block">
+                {{ user?.email }}
             </a>
         </div>
     </div>
